@@ -12,12 +12,10 @@
 <p>
 [% IF moderation_action == 'set_moderation' %]
   You are about to change the moderation flag on 
-  <span class="node_name">[% node_name %]</span>.
 [% ELSE %]
   You are about to moderate a version of
-  <span class="node_name">[% node_name %]</span>.
-  completely erase this page and all its history.
 [% END %]
+<span class="node_name">[% node_name %]</span>.
 To do so, please enter the admin password. If not, you can 
 <a href="[% cgi_url %]?action=admin">go back to the admin page</a>.
 </p>
